# NexusProtocol

./: .env.example  .gitignore  Anchor.toml  README.md  next.config.ts  nexus-deployer.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tests.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/compliance/: page.tsx
app/dashboard/: page.tsx
app/demo/: layout.tsx  page.tsx
app/fx/: page.tsx
certs/: certificate.p12
hooks/: useCompliance.ts  useEscrows.ts  useFxVenue.ts  useNexusSession.ts  useSettlement.ts  useSixBfi.ts
idl/: nexus.json
prisma/: schema.prisma
programs/nexus/: Cargo.toml
programs/nexus/src/: errors.rs  events.rs  lib.rs
programs/nexus/src/instructions/: add_fx_liquidity.rs  cancel_fx_quote.rs  check_collateral_health.rs  create_escrow.rs  create_lineage_record.rs  dispute_escrow.rs  execute_settlement.rs  fund_escrow.rs  fund_escrow_with_collateral.rs  initialize_fx_venue.rs  initialize_protocol.rs  liquidate_collateral.rs  mod.rs  post_fx_quote.rs  refund_escrow.rs  register_institution.rs  remove_fx_liquidity.rs  resolve_dispute.rs  revoke_kyc_record.rs  submit_condition.rs  update_kyc_record.rs  verify_lineage_chain.rs
programs/nexus/src/state/: compliance.rs  config.rs  escrow.rs  fx_venue.rs  mod.rs
programs/nexus/src/utils/: compliance.rs  fx.rs  math.rs  mod.rs
scripts/: create-devnet-custom-mint.cjs  seed-devnet.cjs  vercel-build-init.cjs
store/: useComplianceStore.ts  useOnboardingStore.ts  useTradeStore.ts  useWalletStore.ts
tests/: nexus.ts  target-types.d.ts
types/: nexus.d.ts  nexus.ts
(+74 files in other folders)
