[package]
name = "nexus"
version = "0.1.0"
description = "NEXUS Protocol - Compliance-native programmable trade settlement and institutional FX venue on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["token", "token_2022", "associated_token"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
