[package]
name = "nexus"
version = "0.1.0"
description = "NEXUS Protocol - Compliance-native programmable trade settlement and institutional FX venue on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "nexus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "token_2022", "associated_token"] }
